[project]
name = "ibooks-to-epub"
version = "0.1.0"
description = "Convert Apple .ibooks files to standard .epub format"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
ibooks-to-epub = "convert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["convert.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
